--- a/index.html
+++ b/index.html
@@ -10,7 +10,87 @@
   </head>
   <body>
     <div class="container">
-      <div class="rolling-menu"></div>
+      <div class="rolling-menu">
+        <div class="rolling-menu__elements">
+          <div
+            class="rolling-menu__element-container rolling-menu__element-container_pyro"
+          >
+            <div class="rolling-menu__element">
+              <a href="#" class="rolling-menu__link">
+                <svg class="rolling-menu__icon rolling-menu__icon_pyro">
+                  <use xlink:href="./img/sprite.svg#pyro"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div
+            class="rolling-menu__element-container rolling-menu__element-container_hydro"
+          >
+            <div class="rolling-menu__element">
+              <a href="#" class="rolling-menu__link">
+                <svg class="rolling-menu__icon rolling-menu__icon_hydro">
+                  <use xlink:href="./img/sprite.svg#hydro"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div
+            class="rolling-menu__element-container rolling-menu__element-container_anemo"
+          >
+            <div class="rolling-menu__element">
+              <a href="#" class="rolling-menu__link">
+                <svg class="rolling-menu__icon rolling-menu__icon_anemo">
+                  <use xlink:href="./img/sprite.svg#anemo"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div
+            class="rolling-menu__element-container rolling-menu__element-container_electro"
+          >
+            <div class="rolling-menu__element">
+              <a href="#" class="rolling-menu__link">
+                <svg class="rolling-menu__icon rolling-menu__icon_electro">
+                  <use xlink:href="./img/sprite.svg#electro"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div
+            class="rolling-menu__element-container rolling-menu__element-container_dendro"
+          >
+            <div class="rolling-menu__element">
+              <a href="#" class="rolling-menu__link">
+                <svg class="rolling-menu__icon rolling-menu__icon_dendro">
+                  <use xlink:href="./img/sprite.svg#dendro"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div
+            class="rolling-menu__element-container rolling-menu__element-container_cryo"
+          >
+            <div class="rolling-menu__element">
+              <a href="#" class="rolling-menu__link">
+                <svg class="rolling-menu__icon rolling-menu__icon_cryo">
+                  <use xlink:href="./img/sprite.svg#cryo"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div
+            class="rolling-menu__element-container rolling-menu__element-container_geo"
+          >
+            <div class="rolling-menu__element">
+              <a href="#" class="rolling-menu__link">
+                <svg class="rolling-menu__icon rolling-menu__icon_geo">
+                  <use xlink:href="./img/sprite.svg#geo"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
