--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="rolling-menu__element">
               <a href="#" class="rolling-menu__link">
                 <svg class="rolling-menu__icon rolling-menu__icon_pyro">
-                  <use xlink:href="./img/sprite.svg#pyro"></use>
+                  <use xlink:href="./img/Sprite.svg#pyro"></use>
                 </svg>
               </a>
             </div>
@@ -29,7 +29,7 @@
             <div class="rolling-menu__element">
               <a href="#" class="rolling-menu__link">
                 <svg class="rolling-menu__icon rolling-menu__icon_hydro">
-                  <use xlink:href="./img/sprite.svg#hydro"></use>
+                  <use xlink:href="./img/Sprite.svg#hydro"></use>
                 </svg>
               </a>
             </div>
@@ -40,7 +40,7 @@
             <div class="rolling-menu__element">
               <a href="#" class="rolling-menu__link">
                 <svg class="rolling-menu__icon rolling-menu__icon_anemo">
-                  <use xlink:href="./img/sprite.svg#anemo"></use>
+                  <use xlink:href="./img/Sprite.svg#anemo"></use>
                 </svg>
               </a>
             </div>
@@ -51,7 +51,7 @@
             <div class="rolling-menu__element">
               <a href="#" class="rolling-menu__link">
                 <svg class="rolling-menu__icon rolling-menu__icon_electro">
-                  <use xlink:href="./img/sprite.svg#electro"></use>
+                  <use xlink:href="./img/Sprite.svg#electro"></use>
                 </svg>
               </a>
             </div>
@@ -62,7 +62,7 @@
             <div class="rolling-menu__element">
               <a href="#" class="rolling-menu__link">
                 <svg class="rolling-menu__icon rolling-menu__icon_dendro">
-                  <use xlink:href="./img/sprite.svg#dendro"></use>
+                  <use xlink:href="./img/Sprite.svg#dendro"></use>
                 </svg>
               </a>
             </div>
@@ -73,7 +73,7 @@
             <div class="rolling-menu__element">
               <a href="#" class="rolling-menu__link">
                 <svg class="rolling-menu__icon rolling-menu__icon_cryo">
-                  <use xlink:href="./img/sprite.svg#cryo"></use>
+                  <use xlink:href="./img/Sprite.svg#cryo"></use>
                 </svg>
               </a>
             </div>
@@ -84,7 +84,7 @@
             <div class="rolling-menu__element">
               <a href="#" class="rolling-menu__link">
                 <svg class="rolling-menu__icon rolling-menu__icon_geo">
-                  <use xlink:href="./img/sprite.svg#geo"></use>
+                  <use xlink:href="./img/Sprite.svg#geo"></use>
                 </svg>
               </a>
             </div>
