--- a/index.html
+++ b/index.html
@@ -12,82 +12,46 @@
     <div class="container">
       <div class="rolling-menu">
         <div class="rolling-menu__elements">
-          <div
-            class="rolling-menu__element-container rolling-menu__element-container_pyro"
-          >
-            <div class="rolling-menu__element">
-              <a href="#" class="rolling-menu__link">
-                <svg class="rolling-menu__icon rolling-menu__icon_pyro">
-                  <use xlink:href="./img/Sprite.svg#pyro"></use>
-                </svg>
-              </a>
-            </div>
+          <div class="rolling-menu__element rolling-menu__element_pyro">
+            <svg class="rolling-menu__icon rolling-menu__icon_pyro">
+              <use xlink:href="./img/Sprite.svg#pyro"></use>
+            </svg>
           </div>
-          <div
-            class="rolling-menu__element-container rolling-menu__element-container_hydro"
-          >
-            <div class="rolling-menu__element">
-              <a href="#" class="rolling-menu__link">
-                <svg class="rolling-menu__icon rolling-menu__icon_hydro">
-                  <use xlink:href="./img/Sprite.svg#hydro"></use>
-                </svg>
-              </a>
-            </div>
+
+          <div class="rolling-menu__element rolling-menu__element_hydro">
+            <svg class="rolling-menu__icon rolling-menu__icon_hydro">
+              <use xlink:href="./img/Sprite.svg#hydro"></use>
+            </svg>
           </div>
-          <div
-            class="rolling-menu__element-container rolling-menu__element-container_anemo"
-          >
-            <div class="rolling-menu__element">
-              <a href="#" class="rolling-menu__link">
-                <svg class="rolling-menu__icon rolling-menu__icon_anemo">
-                  <use xlink:href="./img/Sprite.svg#anemo"></use>
-                </svg>
-              </a>
-            </div>
+
+          <div class="rolling-menu__element rolling-menu__element_anemo">
+            <svg class="rolling-menu__icon rolling-menu__icon_anemo">
+              <use xlink:href="./img/Sprite.svg#anemo"></use>
+            </svg>
           </div>
-          <div
-            class="rolling-menu__element-container rolling-menu__element-container_electro"
-          >
-            <div class="rolling-menu__element">
-              <a href="#" class="rolling-menu__link">
-                <svg class="rolling-menu__icon rolling-menu__icon_electro">
-                  <use xlink:href="./img/Sprite.svg#electro"></use>
-                </svg>
-              </a>
-            </div>
+
+          <div class="rolling-menu__element rolling-menu__element_electro">
+            <svg class="rolling-menu__icon rolling-menu__icon_electro">
+              <use xlink:href="./img/Sprite.svg#electro"></use>
+            </svg>
           </div>
-          <div
-            class="rolling-menu__element-container rolling-menu__element-container_dendro"
-          >
-            <div class="rolling-menu__element">
-              <a href="#" class="rolling-menu__link">
-                <svg class="rolling-menu__icon rolling-menu__icon_dendro">
-                  <use xlink:href="./img/Sprite.svg#dendro"></use>
-                </svg>
-              </a>
-            </div>
+
+          <div class="rolling-menu__element rolling-menu__element_dendro">
+            <svg class="rolling-menu__icon rolling-menu__icon_dendro">
+              <use xlink:href="./img/Sprite.svg#dendro"></use>
+            </svg>
           </div>
-          <div
-            class="rolling-menu__element-container rolling-menu__element-container_cryo"
-          >
-            <div class="rolling-menu__element">
-              <a href="#" class="rolling-menu__link">
-                <svg class="rolling-menu__icon rolling-menu__icon_cryo">
-                  <use xlink:href="./img/Sprite.svg#cryo"></use>
-                </svg>
-              </a>
-            </div>
+
+          <div class="rolling-menu__element rolling-menu__element_cryo">
+            <svg class="rolling-menu__icon rolling-menu__icon_cryo">
+              <use xlink:href="./img/Sprite.svg#cryo"></use>
+            </svg>
           </div>
-          <div
-            class="rolling-menu__element-container rolling-menu__element-container_geo"
-          >
-            <div class="rolling-menu__element">
-              <a href="#" class="rolling-menu__link">
-                <svg class="rolling-menu__icon rolling-menu__icon_geo">
-                  <use xlink:href="./img/Sprite.svg#geo"></use>
-                </svg>
-              </a>
-            </div>
+
+          <div class="rolling-menu__element rolling-menu__element_geo">
+            <svg class="rolling-menu__icon rolling-menu__icon_geo">
+              <use xlink:href="./img/Sprite.svg#geo"></use>
+            </svg>
           </div>
         </div>
       </div>
