--- a/index.html
+++ b/index.html
@@ -9,52 +9,59 @@
     <title>Genshin</title>
   </head>
   <body>
-    <div class="container">
-      <div class="rolling-menu">
-        <div class="rolling-menu__elements">
-          <div class="rolling-menu__element rolling-menu__element_pyro">
-            <svg class="rolling-menu__icon rolling-menu__icon_pyro">
-              <use xlink:href="./img/Sprite.svg#pyro"></use>
-            </svg>
-          </div>
+    <header class="header">
+      <div class="container header__container">
+        <p class="header__text">Genshin Impact Heroes</p>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <div class="rolling-menu">
+          <div class="rolling-menu__elements">
+            <div class="rolling-menu__element rolling-menu__element_pyro">
+              <svg class="rolling-menu__icon rolling-menu__icon_pyro">
+                <use xlink:href="./img/Sprite.svg#pyro"></use>
+              </svg>
+            </div>
 
-          <div class="rolling-menu__element rolling-menu__element_hydro">
-            <svg class="rolling-menu__icon rolling-menu__icon_hydro">
-              <use xlink:href="./img/Sprite.svg#hydro"></use>
-            </svg>
-          </div>
+            <div class="rolling-menu__element rolling-menu__element_hydro">
+              <svg class="rolling-menu__icon rolling-menu__icon_hydro">
+                <use xlink:href="./img/Sprite.svg#hydro"></use>
+              </svg>
+            </div>
 
-          <div class="rolling-menu__element rolling-menu__element_anemo">
-            <svg class="rolling-menu__icon rolling-menu__icon_anemo">
-              <use xlink:href="./img/Sprite.svg#anemo"></use>
-            </svg>
-          </div>
+            <div class="rolling-menu__element rolling-menu__element_anemo">
+              <svg class="rolling-menu__icon rolling-menu__icon_anemo">
+                <use xlink:href="./img/Sprite.svg#anemo"></use>
+              </svg>
+            </div>
 
-          <div class="rolling-menu__element rolling-menu__element_electro">
-            <svg class="rolling-menu__icon rolling-menu__icon_electro">
-              <use xlink:href="./img/Sprite.svg#electro"></use>
-            </svg>
-          </div>
+            <div class="rolling-menu__element rolling-menu__element_electro">
+              <svg class="rolling-menu__icon rolling-menu__icon_electro">
+                <use xlink:href="./img/Sprite.svg#electro"></use>
+              </svg>
+            </div>
 
-          <div class="rolling-menu__element rolling-menu__element_dendro">
-            <svg class="rolling-menu__icon rolling-menu__icon_dendro">
-              <use xlink:href="./img/Sprite.svg#dendro"></use>
-            </svg>
-          </div>
+            <div class="rolling-menu__element rolling-menu__element_dendro">
+              <svg class="rolling-menu__icon rolling-menu__icon_dendro">
+                <use xlink:href="./img/Sprite.svg#dendro"></use>
+              </svg>
+            </div>
 
-          <div class="rolling-menu__element rolling-menu__element_cryo">
-            <svg class="rolling-menu__icon rolling-menu__icon_cryo">
-              <use xlink:href="./img/Sprite.svg#cryo"></use>
-            </svg>
-          </div>
+            <div class="rolling-menu__element rolling-menu__element_cryo">
+              <svg class="rolling-menu__icon rolling-menu__icon_cryo">
+                <use xlink:href="./img/Sprite.svg#cryo"></use>
+              </svg>
+            </div>
 
-          <div class="rolling-menu__element rolling-menu__element_geo">
-            <svg class="rolling-menu__icon rolling-menu__icon_geo">
-              <use xlink:href="./img/Sprite.svg#geo"></use>
-            </svg>
+            <div class="rolling-menu__element rolling-menu__element_geo">
+              <svg class="rolling-menu__icon rolling-menu__icon_geo">
+                <use xlink:href="./img/Sprite.svg#geo"></use>
+              </svg>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
